--- a/productos.html
+++ b/productos.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>productos</title> 
+    <title>PRODUCTOS</title> 
     <style>
         table {
             background-color: rgb(5, 196, 249);
             font-size: 18px;
         }
         img{
-              width: 180px;
+              width: 120px;
              height: auto;
-             border-radius: 20px;
+             border-radius: 10px;
             display: block;
              margin: 0 auto;
     }
@@ -25,9 +25,9 @@
       
                 <thead>
                     <tr>
-                        <th>producto</th>
+                        <th>Producto</th>
                         <th>Descripción</th>
-                        <th style="width: 10%;">precio</th>
+                        <th style="width: 10%;">Precio</th>
                     </tr>
                     <thead>
                         <tr>
