--- a/proveedores.html
+++ b/proveedores.html
@@ -11,8 +11,50 @@
         font-size: 16px;
         font-family: 'Times New Roman', Times, serif;
     }
+    .img01{
+        width: 40%;
+        height: auto;
+        padding: 10px;
+        font-display: block;
+        margin: 0 auto;
+    }
+    .tdtext{
+        background-color: brown;
+        color: white;
+        text-align: center;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 16px;
+    }
 </style>
 <body>
+    <body>
+    <table border="1">
+        <caption>Proveedores</caption>
+        <thead>
+            <tr>
+                <th class="tdtext">ID</th>
+                <th class="tdtext">Nombre</th>
+                <th class="tdtext">Producto</th>
+                <th class="tdtext">Teléfono</th>
+            </tr>
+            <tr>
+                <td>001</td>
+                <td>sillaa</td>
+                <td><img src="imagenes/sillaa.jpg" alt=""></td>
+                <td>123456789</td>
+            </tr>
+            <tr>
+                <td>002</td>
+                <td>kaneki</td>
+                <td><img src="imagenes/kaneki.jpeg" alt="" width="400" </td>
+                <td>987654321</td>
+            </tr>
+        </tbody>
+    </table>
+</body>
+
+
+    </table>
     
 </body>
 </html>
